--- a/dev/index.html
+++ b/dev/index.html
@@ -2479,6 +2479,7 @@ p > span.doi, td > span.doi {
 <li><p>Comparisons and benchmarking: of implementations in base-R and contributed packages with each other, and where relevant with implementations in other software systems.</p></li>
 <li><p>Applications: demonstrating how new or existing techniques can be applied in an area of current interest using R, providing a fresh view of such analyses in R that is of benefit beyond the specific application.</p></li>
 <li><p>Packages: Details of contributed R packages that are available on CRAN or Bioconductor, that go beyond a package vignette. This includes providing the broader context, implementation details, applications or examples of use, with the purpose being to make the work relevant to a wider readership than only the package users. The paper might explain the novelty in implementation and use of R, introduce new data structures or general architectures that could be re-usable for other R projects.</p></li>
+<li><p>Special issue articles: papers associated with a conference like R Medicine, or possibly a collection of papers on a particular topic of interest.</p></li>
 </ul>
 <h2 id="history">History</h2>
 <p>The R Journal was established in 2009, superseding the <a href="http://www.r-project.org/doc/Rnews/index.html">R News</a>. For historical purposes it also a news section, that includes items from R Core, updates from CRAN and Bioconductor, foRwards activiies and conference reports.</p>
