--- a/_web/index.html
+++ b/_web/index.html
@@ -2196,6 +2196,16 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 
   d-title h1 {
     grid-column: page;
+  }
+
+  .rj-blue {
+    color: #2467bb;
+  }
+
+  ul li {
+    line-height: 1.6;
+    margin-top: 0em;
+    margin-bottom: 0em;
   }</style>
   <style type="text/css">
   /* base style */
