--- a/_web/submissions.html
+++ b/_web/submissions.html
@@ -2196,6 +2196,16 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 
   d-title h1 {
     grid-column: page;
+  }
+
+  .rj-blue {
+    color: #2467bb;
+  }
+
+  ul li {
+    line-height: 1.6;
+    margin-top: 0em;
+    margin-bottom: 0em;
   }</style>
   <style type="text/css">
   /* base style */
@@ -2425,7 +2435,9 @@ d-article > * {
 <li>motivating letter that describes why your paper is suitable for the consideration by the R Journal.</li>
 <li>if needed, supplementary files that might include additional technical details or examples.</li>
 </ul>
-<p>Read the information below on the requirements for files and format and then <strong><a href="https://forms.gle/ykj6QcoGQD5ctnA5A">CLICK HERE</a></strong> to submit an article, re-submission, or revision.</p>
+<div class="rj-blue">
+Read the information below on the requirements for files and format] and then <strong><a href="https://forms.gle/ykj6QcoGQD5ctnA5A">CLICK HERE</a></strong> to submit an article, re-submission, or revision.
+</div>
 <h1 id="creating-your-article">Creating your article</h1>
 <p>The <a href="https://rjournal.github.io/rjtools/">rjtools</a> package has a template to create the files needed for a submission in the form required by the R Journal.</p>
 <p>It is strongly recommended that you use the <code>create_article()</code> function. Knitting the Rmd will generate both an HTML and PDF format of your paper.</p>
