--- a/dev/submissions.html
+++ b/dev/submissions.html
@@ -2196,6 +2196,16 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 
   d-title h1 {
     grid-column: page;
+  }
+
+  .rj-blue {
+    color: #2467bb;
+  }
+
+  ul li {
+    line-height: 1.6;
+    margin-top: 0em;
+    margin-bottom: 0em;
   }</style>
   <style type="text/css">
   /* base style */
@@ -2425,11 +2435,13 @@ d-article > * {
 <li>motivating letter that describes why your paper is suitable for the consideration by the R Journal.</li>
 <li>if needed, supplementary files that might include additional technical details or examples.</li>
 </ul>
-<p>Read the information below on the requirements for files and format and then <strong><a href="https://forms.gle/ykj6QcoGQD5ctnA5A">CLICK HERE</a></strong> to submit an article, re-submission, or revision.</p>
+<div class="rj-blue">
+Read the information below on the requirements for files and format] and then <strong><a href="https://forms.gle/ykj6QcoGQD5ctnA5A">CLICK HERE</a></strong> to submit an article, re-submission, or revision.
+</div>
 <h1 id="creating-your-article">Creating your article</h1>
 <p>The <a href="https://rjournal.github.io/rjtools/">rjtools</a> package has a template to create the files needed for a submission in the form required by the R Journal.</p>
 <p>It is strongly recommended that you use the <code>create_article()</code> function. Knitting the Rmd will generate both an HTML and PDF format of your paper.</p>
-<p>If you currently use the <code>rticles::rjournal_article</code> output format for R Markdown, you should be simply able to change output formats to <code>rjtools::rjournal_web_article</code> to switch to the new style.</p>
+<p>If you currently use the <code>rticles::rjournal_article</code> output format for R Markdown, the change involves five steps: (1) change output formats to <code>rjtools::rjournal_web_article</code> to switch to the new style, (2) remove any latex specific functionality, (3) change figure, table references to <code>\@ref()</code> and (4) add the <code>rjournal.csl</code> and <code>rjournal.css</code> template files to your folder, updating YAML to utilise them, and (5) set the reference to the <code>.bib</code> in the YAML.</p>
 <p>When writing your article you should aim to write without specific reference to HTML and LaTeX codes. If you do need to write code specific to the HTML or PDF output, you can use <code>knitr::is_html_output()</code> and <code>knitr::is_latex_output()</code> to conditionally produce a particular output.</p>
 <p>The web articles for the R Journal are based on the [distill framework], which provides several styling and arrangement options for your article contents. The distill R package documentation (generally also applicable to articles written for the R Journal) describes how various article elements can be used: <a href="https://rstudio.github.io/distill/" class="uri">https://rstudio.github.io/distill/</a></p>
 <p>We are especially looking for creative uses of interactive content in HTML formatted articles. This will require that you make different code chunks evaluated conditionally using <code>eval=knitr::is_html_output()</code> or <code>eval=knitr::is_latex_output()</code> with appropriate re-captioning, and conditional inline reference links. Interactive plots should be produced with a manageable file size (aim for under 10Mb) which may require small data examples.</p>
