--- a/_web/submissions.html
+++ b/_web/submissions.html
@@ -2436,16 +2436,19 @@ d-article > * {
 <li>if needed, supplementary files that might include additional technical details or examples.</li>
 </ul>
 <div class="rj-blue">
-Read the information below on the requirements for files and format] and then <strong><a href="https://forms.gle/ykj6QcoGQD5ctnA5A">CLICK HERE</a></strong> to submit an article, re-submission, or revision.
+Read the information below on the requirements for files and format and then <strong><a href="https://forms.gle/ykj6QcoGQD5ctnA5A">CLICK HERE</a></strong> to submit an article, re-submission, or revision.
 </div>
 <h1 id="creating-your-article">Creating your article</h1>
+<h3 id="rmarkdown-to-output-html-and-pdf">Rmarkdown to output html and pdf</h3>
 <p>The <a href="https://rjournal.github.io/rjtools/">rjtools</a> package has a template to create the files needed for a submission in the form required by the R Journal.</p>
 <p>It is strongly recommended that you use the <code>create_article()</code> function. Knitting the Rmd will generate both an HTML and PDF format of your paper.</p>
-<p>If you currently use the <code>rticles::rjournal_article</code> output format for R Markdown, the change involves five steps: (1) change output formats to <code>rjtools::rjournal_web_article</code> to switch to the new style, (2) remove any latex specific functionality, (3) change figure, table references to <code>\@ref()</code> and (4) add the <code>rjournal.csl</code> and <code>rjournal.css</code> template files to your folder, updating YAML to utilise them, and (5) set the reference to the <code>.bib</code> in the YAML.</p>
 <p>When writing your article you should aim to write without specific reference to HTML and LaTeX codes. If you do need to write code specific to the HTML or PDF output, you can use <code>knitr::is_html_output()</code> and <code>knitr::is_latex_output()</code> to conditionally produce a particular output.</p>
-<p>The web articles for the R Journal are based on the [distill framework], which provides several styling and arrangement options for your article contents. The distill R package documentation (generally also applicable to articles written for the R Journal) describes how various article elements can be used: <a href="https://rstudio.github.io/distill/" class="uri">https://rstudio.github.io/distill/</a></p>
+<p>The web articles for the R Journal are based on the distill framework, which provides several styling and arrangement options for your article contents. The <strong>distill R package documentation</strong> (generally also applicable to articles written for the R Journal) describes various article elements and Rmarkdown syntax: <a href="https://rstudio.github.io/distill/" class="uri">https://rstudio.github.io/distill/</a>.</p>
 <p>We are especially looking for creative uses of interactive content in HTML formatted articles. This will require that you make different code chunks evaluated conditionally using <code>eval=knitr::is_html_output()</code> or <code>eval=knitr::is_latex_output()</code> with appropriate re-captioning, and conditional inline reference links. Interactive plots should be produced with a manageable file size (aim for under 10Mb) which may require small data examples.</p>
-<p>For the immediate future, articles generated using the existing <a href="https://journal.r-project.org/share/author-guide.pdf">latex style</a> will also be accepted.</p>
+<h3 id="converting-from-rticlesrjournal_article-rmarkdown">Converting from rticles:rjournal_article Rmarkdown</h3>
+<p>If you currently use the <code>rticles::rjournal_article</code> output format for R Markdown, the change involves five steps: (1) change output formats to <code>rjtools::rjournal_web_article</code> to switch to the new style, (2) remove any latex specific functionality, (3) change figure, table references to <code>\@ref()</code> and (4) add the <code>rjournal.csl</code> and <code>rjournal.css</code> template files to your folder, updating YAML to utilise them, and (5) set the reference to the <code>.bib</code> in the YAML.</p>
+<h3 id="traditional-latex-format">Traditional latex format</h3>
+<p>Articles can also be written using the traditional <a href="https://journal.r-project.org/share/RJtemplate.zip">latex template</a>. Using this style you will need to provide RJwrapper.tex, RJwrapper.pdf, RJournal.sty, your-article.tex (which contains the content of your paper), your-article.bib, your-article.R (to reproduce results in your paper), in addition to the motivation letter. You should avoid using any other specialist latex style files. The <code>rjtools</code> check functions described below can also be applied to check your files prior to submission.</p>
 <h1 id="checking-your-article">Checking your article</h1>
 <p>The <code>rjtools</code> package has a number of functions which can help you check that your article is ready to submit. These include:</p>
 <ul>
@@ -2473,15 +2476,15 @@ Read the information below on the requirements for files and format] and then <s
 <li>Names of all authors.</li>
 <li>Article title.</li>
 <li>Article type.</li>
-<li>Article keywords/tags. You should be prepared to select at least one or two from the list (current CRAN Task Views) and you are free to add an additional words or phrases that accurately describe your paper.</li>
+<li>Article keywords/tags. You should be prepared to select at least one or two from the list (which is the same as the current CRAN Task Views) and you are free to add an additional words or phrases that accurately describe your paper.</li>
 <li><strong>Zip</strong> file containing:
 <ul>
 <li>paper files to build the article including the <code>.Rmd</code>, <code>.tex</code>, <code>.bib</code>, <code>.sty</code>, figures.</li>
 <li>file to reproduce the results, including R scripts, and data.</li>
 <li>motivating letter that describes why your paper is suitable for the consideration by the R Journal.</li>
-<li>if needed, supplementary files that might include additional technical details or examples.</li>
+<li>reproducibility (supplementary) files in order that results reported in your paper can be reproduced, plus any additional files that contain additional technical details for your work or extra examples.</li>
 </ul></li>
-<li>List of the supplementary files (as they are provided in your unzipped file set). These include any <code>.Rmd</code>, <code>.R</code>, data files like <code>.csv</code>, <code>.rda</code>, <code>.rds</code>, and supplementary documents that contain additional technical details for examples. It should NOT contain a list of figure files. This list is used to automatically build the <code>.zip</code> file that is distributed along with your paper, when it is published. Think about this as the list of files that contain all the other information that might be relevant for the reader of your article.</li>
+<li><strong>A list of the reproducibility and supplementary files</strong>, exactly as they are placed in your paper directory, e.g. <code>mypaper.Rmd, data/mydata.rds, scripts/mycode.R, appendix.pdf</code>. This list is used to automatically build the <code>.zip</code> file that is distributed along with your paper as supplementary materials, when it is published. Thus it is important that you provide the comma-delimited file names to streamline the build of your paper. If you have a lot of data and code files you so that listing them all is prohibitive, you can zip them into one file to list. Note that, figure files are not considered supplementary materials for the R Journal.</li>
 </ul>
 <p>You may have problems submitting if size of your submission zip file is more than 10Mb. If you have large files, for example, data files, you can make them available on an alternative site and provide the links in the paper. If you have problems, please contact the Editor-in-Chief at <a href="mailto:r-journal@r-project.org" class="email">r-journal@r-project.org</a>.</p>
 <p>Your paper will be checked for reproducibility by running the code provided. Please ensure that the examples can be run in a timely manner, perhaps by reducing the example data size. If necessary, intermediate output files, can be provided to shorten the run time.</p>
