--- a/submissions.html
+++ b/submissions.html
@@ -123,7 +123,10 @@
     <div class="col-xs-12 col-sm-7">
       <h1>The R Journal: Submissions</h1>
 
-<h2>Instructions for authors</h2>
+If you would like to use Rmarkdown to write your paper, to produce both html and pdf formats, follow the instructions at <a href="https://journal.r-project.org/dev/submissions.html" target="_blank">the R Journal develpment web site </a>. 
+
+<h2>Latex article instructions for authors</h2> 
+
 
 <p>Please read the <a href="share/author-guide.pdf" target="_blank">Instructions for Authors</a>, which explains how to prepare an article for submission to <em>The R Journal</em>.</p>
 
