--- a/dev/submissions.html
+++ b/dev/submissions.html
@@ -2438,6 +2438,8 @@ d-article > * {
 <div class="rj-blue">
 Read the information below on the requirements for files and format and then <strong><a href="https://forms.gle/ykj6QcoGQD5ctnA5A">CLICK HERE</a></strong> to submit an article, re-submission, or revision.
 </div>
+<p>
+<p>We are also keen to welcome new reviewers for the R Journal. If you would like to volunteer to review articles, please complete this <a href="https://docs.google.com/forms/d/e/1FAIpQLSf8EmpF85ASWqPHXqV0vdQd-GHhNBaAZZEYf4qxO3gTl-eGyA/viewform">form here</a>. You should have at least completed an undergraduate degree, and be an active R user.</p>
 <h1 id="creating-your-article">Creating your article</h1>
 <h3 id="rmarkdown-to-output-html-and-pdf">Rmarkdown to output html and pdf</h3>
 <p>The <a href="https://rjournal.github.io/rjtools/">rjtools</a> package has a template to create the files needed for a submission in the form required by the R Journal.</p>
@@ -2484,7 +2486,7 @@ Read the information below on the requirements for files and format and then <st
 <li>motivating letter that describes why your paper is suitable for the consideration by the R Journal.</li>
 <li>reproducibility (supplementary) files in order that results reported in your paper can be reproduced, plus any additional files that contain additional technical details for your work or extra examples.</li>
 </ul></li>
-<li><strong>A list of the reproducibility and supplementary files</strong>, exactly as they are placed in your paper directory, e.g. <code>mypaper.Rmd, data/mydata.rds, scripts/mycode.R, appendix.pdf</code>. This list is used to automatically build the <code>.zip</code> file that is distributed along with your paper as supplementary materials, when it is published. Thus it is important that you provide the comma-delimited file names to streamline the build of your paper. If you have a lot of data and code files you so that listing them all is prohibitive, you can zip them into one file to list. Note that, figure files are not considered supplementary materials for the R Journal.</li>
+<li><strong>A list of the reproducibility and supplementary files</strong>, exactly as they are placed in your paper directory, to be entered comma-delimited like <code>mypaper.Rmd, data/mydata.rds, scripts/mycode.R, appendix.pdf</code>. This list is used to automatically build the <code>.zip</code> file that is distributed along with your paper as supplementary materials, when it is published. Thus it is important that you provide the comma-delimited file names to streamline the build of your paper. If you have a lot of data and code files you so that listing them all is prohibitive, you can zip them into one file to list. Note that, figure files are not considered supplementary materials for the R Journal.</li>
 </ul>
 <p>You may have problems submitting if size of your submission zip file is more than 10Mb. If you have large files, for example, data files, you can make them available on an alternative site and provide the links in the paper. If you have problems, please contact the Editor-in-Chief at <a href="mailto:r-journal@r-project.org" class="email">r-journal@r-project.org</a>.</p>
 <p>Your paper will be checked for reproducibility by running the code provided. Please ensure that the examples can be run in a timely manner, perhaps by reducing the example data size. If necessary, intermediate output files, can be provided to shorten the run time.</p>
