refinement of submission instructions

--- a/_web/submissions.html
+++ b/_web/submissions.html
@@ -2430,8 +2430,8 @@ d-article > * {
 </div>
 <p>Articles for the R Journal are short to medium length, no more than 20 pages, on topics of interest to the R community. The submission needs to include:</p>
 <ul>
-<li>paper files to build the article including the <code>.Rmd</code>, <code>.tex</code>, <code>.bib</code>, <code>.sty</code>, figures.</li>
-<li>file to reproduce the results, including R scripts, and data.</li>
+<li>paper files to build the article including the <code>.Rmd</code>, <code>.tex</code>, <code>.bib</code>, <code>.sty</code>, figures, and the output files <code>.html</code>, <code>.pdf</code>.</li>
+<li>files to reproduce the results presented in the paper, including R scripts, and data.</li>
 <li>motivating letter that describes why your paper is suitable for the consideration by the R Journal.</li>
 <li>if needed, supplementary files that might include additional technical details or examples.</li>
 </ul>
