deploy: a5ac94f24ce7abc31d1ebb5c02d9f2cf36ff725b

--- a/board.html
+++ b/board.html
@@ -141,7 +141,7 @@ Louis Aslett, Durham University, UK <br>
 Elizabeth Atkinson, Mayo Clinic, USA<br>
 Rasmus Bååth, Lund University, Sweden<br>
 Przemek Biecek, University of Warsaw, Poland<br>
-Mine Çetinkaya-Rundel, Duke University, USA
+Mine Çetinkaya-Rundel, Duke University, USA<br>
 Xiaoyue Cheng, Univerity of Nebraska, Omaha, USA<br>
 Katarina Domijan, Maynooth University, Ireland<br>
 Isabella Gollini, University College Dublin, Ireland<br>
