updated AE list

--- a/_web/index.html
+++ b/_web/index.html
@@ -2510,6 +2510,7 @@ p > span.doi, td > span.doi {
 <li>Elizabeth Atkinson, Mayo Clinic, USA</li>
 <li>Rasmus Bååth, Lund University, Sweden</li>
 <li>Przemek Biecek, University of Warsaw, Poland</li>
+<li>Chris Brunsdon, Maynooth University, Ireland</li>
 <li>Mine Çetinkaya-Rundel, Duke University, USA</li>
 <li>Xiaoyue Cheng, University of Nebraska, Omaha, USA</li>
 <li>Katarina Domijan, Maynooth University, Ireland</li>
@@ -2518,6 +2519,7 @@ p > span.doi, td > span.doi {
 <li>Adam Loy, Carleton University, USA</li>
 <li>Elizabeth Sweeney, Cornell University, USA</li>
 <li>Priyanga Dilini Talagala, University of Moratuwa, Sri Lanka</li>
+<li>Emi Tanaka, Monash University, Australia</li>
 <li>Nicholas Tierney, Telethon Kids, Australia</li>
 <li>Mark van der Loo, Statistics Netherlands, the Netherlands</li>
 <li>Susan Vanderplas, University of Nebraska, Lincoln, USA</li>
