update to AE list

--- a/board.html
+++ b/board.html
@@ -23,6 +23,7 @@ Louis Aslett, Durham University, UK <br>
 Elizabeth Atkinson, Mayo Clinic, USA<br>
 Rasmus Bååth, Lund University, Sweden<br>
 Przemek Biecek, University of Warsaw, Poland<br>
+Chris Brunsdon, Maynooth University, Ireland <br>
 Mine Çetinkaya-Rundel, Duke University, USA<br>
 Xiaoyue Cheng, Univerity of Nebraska, Omaha, USA<br>
 Katarina Domijan, Maynooth University, Ireland<br>
@@ -31,6 +32,7 @@ Kieran Healy, Duke University, USA <br>
 Adam Loy, Carleton University, USA <br>
 Elizabeth Sweeney, Cornell University, USA</br>
 Priyanga Dilini Talagala, University of Moratuwa, Sri Lanka<br>
+Emi Tanaka, Monash University, Australia<br>
 Nicholas Tierney, Telethon Kids, Australia<br>
 Mark van der Loo, Statistics Netherlands, the Netherlands<br>
 Susan Vanderplas, University of Nebraska, Lincoln, USA<br>
