update to editorial board

--- a/board.html
+++ b/board.html
@@ -6,14 +6,13 @@ title: Editorial board
 <h1>The R Journal: Editorial board</h1>
 
 <p><b>Editor-in-Chief:</b><br>
-Di Cook, Monash University, Australia<br>
+Catherine Hurley, Maynooth University, Ireland <br>
 <a
 href="mailto:r-journal@r-project.org">r-journal@r-project.org</a></p>
 
 <p><b>Executive editors:</b> <br>
-Catherine Hurley, Maynooth University, Ireland <br>
+Di Cook, Monash University, Australia <br>
 Simon Urbanek, The University of Auckland, New Zealand <br>
-Michael Kane, Yale University, USA <br>
 Gavin Simpson, Aarhus University, Denmark <br>
 </p>
 
@@ -23,6 +22,7 @@ Louis Aslett, Durham University, UK <br>
 Elizabeth Atkinson, Mayo Clinic, USA<br>
 Rasmus Bååth, Lund University, Sweden<br>
 Przemek Biecek, University of Warsaw, Poland<br>
+Simone Blomberg, University of Queensland <br>
 Chris Brunsdon, Maynooth University, Ireland <br>
 Mine Çetinkaya-Rundel, Duke University, USA<br>
 Xiaoyue Cheng, Univerity of Nebraska, Omaha, USA<br>
@@ -41,20 +41,11 @@ Emily Zabor, The Cleveland Clinic and Tassig Cancer Institute, USA<br>
 </p>
 
 <p><b>Editorial advisory board:</b><br>
-Roger Bivand, Norwegian School of Economics, Bergen, Norway<br>
-Michael Lawrence, Genentech, Inc., San Francisco, USA<br>
-Bettina Grün, Johannes Kepler Universität Linz, Austria<br>
-Deepayan Sarkar, Indian Statistical Institute, Delhi, India<br>
-Friedrich Leisch, University of Natural Resources and Life Sciences, Vienna, Austria<br>
-Hadley Wickham, RStudio, Houston, Texas, USA<br>
-Heather Turner, University of Warwick, Coventry, UK<br>
-John Fox, McMaster University, Hamilton, Ontario, Canada<br>
-Kurt Hornik, WU Wirtschaftsuniversität Wien, Vienna, Austria<br>
-Paul Murrell, University of Auckland, New Zealand<br>
-Peter Dalgaard, Copenhagen Business School, Denmark<br>
-Martyn Plummer, University of Warwick, UK<br>
-Vincent Carey, Harvard Medical School, Boston, USA<br>
-Torsten Hothorn, University of Zurich, Switzerland<br>
+
+Henrik Bengtssen, University of California, San Francisco <br>
+Gabriela de Quiroz, Chief Data Scientist, IBM <br>
+Michael Kane, Yale University, USA <br>
+Rebecca Killick, Lancaster University <br>
 </p>
 <p><b>Governance:</b><br>
 <i>The R Journal</i> is the open access, refereed journal of the <a href="https://www.r-project.org">R project</a> for statistical computing. It is run under the auspices of the <a href="https://www.r-project.org/foundation/">R Foundation</a>, and editors of the Journal are appointed by the <a href="https://www.r-project.org/foundation/board.html">board</a> of the Foundation.</p>
