removed @ in editorial board

--- a/_web/index.html
+++ b/_web/index.html
@@ -2529,7 +2529,7 @@ p > span.doi, td > span.doi {
 <h3 id="editorial-advisory-board">Editorial advisory board</h3>
 <ul>
 <li>Henrik Bengtssen, University of California, San Francisco</li>
-<li>Gabriela de Quiroz, Chief Data Scientist @ IBM</li>
+<li>Gabriela de Quiroz, Chief Data Scientist, IBM</li>
 <li>Michael Kane, Yale University, USA</li>
 <li>Rebecca Killick, Lancaster University</li>
 </ul>
