instructions to follow Rmd

--- a/submissions.html
+++ b/submissions.html
@@ -5,7 +5,7 @@ title: Submissions
 
 <h1>The R Journal: Submissions</h1>
 
-If you would like to use Rmarkdown to write your paper, to produce both html and pdf formats, follow the instructions at <a href="https://journal.r-project.org/dev/submissions.html" target="_blank">the R Journal develpment web site </a>. 
+We recommend that you use Rmarkdown to write your paper, to produce both html and pdf formats. Follow the instructions at <a href="https://journal.r-project.org/dev/submissions.html" target="_blank">the R Journal development web site </a>. 
 
 <h2>Latex article instructions for authors</h2> 
 
