deploy: bcd382d0af3eef2405354bf1b128d12c40ba2588

--- a/index.html
+++ b/index.html
@@ -2288,6 +2288,7 @@ p > span.doi, td > span.doi {
 <li>Simon Urbanek, The University of Auckland, New Zealand</li>
 <li>Gavin Simpson, Aarhus University, Denmark</li>
 <li>Di Cook, Monash University, Australia</li>
+<li>Mark van der Loo, Statistics Netherlands, The Netherlands</li>
 </ul>
 <h3 id="associate-editors">Associate editors</h3>
 <ul>
@@ -2298,6 +2299,7 @@ p > span.doi, td > span.doi {
 <li>Przemek Biecek, University of Warsaw, Poland</li>
 <li>Simone Blomberg, University of Queensland, Australia</li>
 <li>Chris Brunsdon, Maynooth University, Ireland</li>
+<li>Kevin Burke, University of Limerick, Ireland</li>
 <li>Mine Çetinkaya-Rundel, Duke University, USA</li>
 <li>Xiaoyue Cheng, University of Nebraska, Omaha, USA</li>
 <li>Katarina Domijan, Maynooth University, Ireland</li>
@@ -2308,7 +2310,6 @@ p > span.doi, td > span.doi {
 <li>Priyanga Dilini Talagala, University of Moratuwa, Sri Lanka</li>
 <li>Emi Tanaka, Monash University, Australia</li>
 <li>Nicholas Tierney, Telethon Kids, Australia</li>
-<li>Mark van der Loo, Statistics Netherlands, the Netherlands</li>
 <li>Susan Vanderplas, University of Nebraska, Lincoln, USA</li>
 <li>Earo Wang, The University of Auckland, New Zealand</li>
 <li>Emily Zabor, The Cleveland Clinic and Tassig Cancer Institute, USA</li>
