deploy: 09326f85de2bf5703a3c6e5cdfe861cfa6764b7b

--- a/index.html
+++ b/index.html
@@ -2306,7 +2306,7 @@ p > span.doi, td > span.doi {
 <li>Isabella Gollini, University College Dublin, Ireland</li>
 <li>Kieran Healy, Duke University, USA</li>
 <li>Adam Loy, Carleton College, USA</li>
-<li>Elizabeth Sweeney, Cornell University, USA</li>
+<li>Elizabeth Sweeney, University of Pennsylvania, USA</li>
 <li>Priyanga Dilini Talagala, University of Moratuwa, Sri Lanka</li>
 <li>Emi Tanaka, Monash University, Australia</li>
 <li>Nicholas Tierney, Telethon Kids, Australia</li>
