deploy: 9a26963bf04b0f920cd2dfff8ea1609c696d3be9

--- a/articles.html
+++ b/articles.html
@@ -2512,7 +2512,7 @@ function init_posts_list() {
 <div class="metadata">
 <div class="publishedDate">Dec. 20, 2022</div>
 <div class="dt-authors">
-<div class="dt-author">Department of Pharmacology &amp; Biostatistics</div>
+<div class="dt-author">Peter Cahusac</div>
 </div>
 </div>
 <div class="thumbnail">
