--- a/_articles/RJ-2022-058/RJ-2022-058.html
+++ b/_articles/RJ-2022-058/RJ-2022-058.html
@@ -91,7 +91,7 @@
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["CIMTx_motivating_letter.pdf","CIMTx.bib","CIMTx.tex","CIMTxCH.tex","data_simulation_moderate_covariate_overlap.png","data_simulation_strong_covariate_overlap.png","p_contour.png","p_SA_demo.png","p_weight_comparison.png","preamble.tex","response letter.pdf","RJ-2022-058_files/anchor-4.2.2/anchor.min.js","RJ-2022-058_files/bowser-1.9.3/bowser.min.js","RJ-2022-058_files/distill-2.2.21/template.v2.js","RJ-2022-058_files/header-attrs-2.18/header-attrs.js","RJ-2022-058_files/jquery-3.6.0/jquery-3.6.0.js","RJ-2022-058_files/jquery-3.6.0/jquery-3.6.0.min.js","RJ-2022-058_files/jquery-3.6.0/jquery-3.6.0.min.map","RJ-2022-058_files/popper-2.6.0/popper.min.js","RJ-2022-058_files/tippy-6.2.7/tippy-bundle.umd.min.js","RJ-2022-058_files/tippy-6.2.7/tippy-light-border.css","RJ-2022-058_files/tippy-6.2.7/tippy.css","RJ-2022-058_files/tippy-6.2.7/tippy.umd.min.js","RJ-2022-058_files/webcomponents-2.0.0/webcomponents.js","RJ-2022-058.pdf","RJ-2022-058.zip","RJournal.sty","RJwrapper.bbl","RJwrapper.brf","RJwrapper.log","RJwrapper.synctex.gz","RJwrapper.tex"]}
+  {"type":"character","attributes":{},"value":["CIMTx_motivating_letter.pdf","CIMTx.bib","CIMTx.tex","CIMTxCH.tex","data_simulation_moderate_covariate_overlap.png","data_simulation_strong_covariate_overlap.png","p_contour.png","p_SA_demo.png","p_weight_comparison.png","preamble.tex","response letter.pdf","RJ-2022-058_files/anchor-4.2.2/anchor.min.js","RJ-2022-058_files/bowser-1.9.3/bowser.min.js","RJ-2022-058_files/distill-2.2.21/template.v2.js","RJ-2022-058_files/header-attrs-2.18/header-attrs.js","RJ-2022-058_files/jquery-3.6.0/jquery-3.6.0.js","RJ-2022-058_files/jquery-3.6.0/jquery-3.6.0.min.js","RJ-2022-058_files/jquery-3.6.0/jquery-3.6.0.min.map","RJ-2022-058_files/popper-2.6.0/popper.min.js","RJ-2022-058_files/tippy-6.2.7/tippy-bundle.umd.min.js","RJ-2022-058_files/tippy-6.2.7/tippy-light-border.css","RJ-2022-058_files/tippy-6.2.7/tippy.css","RJ-2022-058_files/tippy-6.2.7/tippy.umd.min.js","RJ-2022-058_files/webcomponents-2.0.0/webcomponents.js","RJ-2022-058.pdf","RJ-2022-058.zip","RJournal.sty","RJwrapper.bbl","RJwrapper.brf","RJwrapper.log","RJwrapper.tex"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -1454,7 +1454,7 @@
   </script>
 
   <!--/radix_placeholder_distill-->
-  <script src="RJ-2022-058_files/header-attrs-2.18/header-attrs.js"></script>
+  <script src="RJ-2022-058_files/header-attrs-2.19/header-attrs.js"></script>
   <script src="RJ-2022-058_files/jquery-3.6.0/jquery-3.6.0.min.js"></script>
   <script src="RJ-2022-058_files/popper-2.6.0/popper.min.js"></script>
   <link href="RJ-2022-058_files/tippy-6.2.7/tippy.css" rel="stylesheet" />
