deploy: d0e008a9467c6ded81e23b9ea63cb06931b05a5a

--- a/issues/2022-3/index.html
+++ b/issues/2022-3/index.html
@@ -122,7 +122,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["RJournal.sty","Rlogo-5.png"]}
+  {"type":"character","attributes":{},"value":["2022-3.log","2022-3.pdf","doi.xml","RJournal.sty","RJwrapper.tex","Rlogo-5.png"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
 <meta name="distill:offset" content="../.."/>
@@ -2154,7 +2154,7 @@ d-appendix d-footnote-list a.footnote-backlink {
   color: var(--hover-color, white);
 }</style>
 <!--/radix_placeholder_distill-->
-  <script src="../../site_libs/header-attrs-2.18/header-attrs.js"></script>
+  <script src="../../site_libs/header-attrs-2.19/header-attrs.js"></script>
   <script src="../../site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
   <script src="../../site_libs/popper-2.6.0/popper.min.js"></script>
   <link href="../../site_libs/tippy-6.2.7/tippy.css" rel="stylesheet" />
@@ -2224,29 +2224,29 @@ d-appendix d-footnote-list a.footnote-backlink {
 <path d="M181.9 256.1c-5-16-4.9-46.9-2-46.9 8.4 0 7.6 36.9 2 46.9zm-1.7 47.2c-7.7 20.2-17.3 43.3-28.4 62.7 18.3-7 39-17.2 62.9-21.9-12.7-9.6-24.9-23.4-34.5-40.8zM86.1 428.1c0 .8 13.2-5.4 34.9-40.2-6.7 6.3-29.1 24.5-34.9 40.2zM248 160h136v328c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V24C0 10.7 10.7 0 24 0h200v136c0 13.2 10.8 24 24 24zm-8 171.8c-20-12.2-33.3-29-42.7-53.8 4.5-18.5 11.6-46.6 6.2-64.2-4.7-29.4-42.4-26.5-47.8-6.8-5 18.3-.4 44.1 8.1 77-11.6 27.6-28.7 64.6-40.8 85.8-.1 0-.1.1-.2.1-27.1 13.9-73.6 44.5-54.5 68 5.6 6.9 16 10 21.5 10 17.9 0 35.7-18 61.1-61.8 25.8-8.5 54.1-19.1 79-23.2 21.7 11.8 47.1 19.5 64 19.5 29.2 0 31.2-32 19.7-43.4-13.9-13.6-54.3-9.7-73.6-7.2zM377 105L279 7c-4.5-4.5-10.6-7-17-7h-6v128h128v-6.1c0-6.3-2.5-12.4-7-16.9zm-74.1 255.3c4.1-2.7-2.5-11.9-42.8-9 37.1 15.8 42.8 9 42.8 9z"></path>
 </svg></a></p>
 <h2 id="table-of-contents">Table of contents</h2>
-<p><a href="../../news/RJ-2022-3-editorial">Editorial</a><br>Catherine Hurley</p>
+<p><a href="../../news/RJ-2022-3-editorial">Editorial</a><br>Catherine Hurley 4</p>
 <h3 id="contributed-research-articles">Contributed Research Articles</h3>
 <p><a href="../../articles/RJ-2022-041">Introducing fastpos: A Fast R Implementation to Find the Critical Point of Stability for a Correlation</a><br>Johannes Titz 5</p>
-<p><a href="../../articles/RJ-2022-042">WLinfer: Statistical Inference for Weighted Lindley Distribution</a><br>Yu-Hyeong Jang, SungBum Kim, Hyun-Ju Jung and Hyoung-Moon Kim (Corresponding author)</p>
-<p><a href="../../articles/RJ-2022-043">ICAOD: An R Package for Finding Optimal designs for Nonlinear Statistical Models by Imperialist Competitive Algorithm</a><br>Ehsan Masoudi, Heinz Holling, Weng Kee Wong and Seongho Kim</p>
-<p><a href="../../articles/RJ-2022-057">Analysis of the Results of Metadynamics Simulations by metadynminer and metadynminer3d</a><br>Dalibor Trapl and Vojtech Spiwok</p>
-<p><a href="../../articles/RJ-2022-052">casebase: An Alternative Framework for Survival Analysis and Comparison of Event Rates</a><br>Sahir Rai Bhatnagar<em>, Maxime Turgeon</em>, Jesse Islam, James A. Hanley and Olli Saarela</p>
-<p><a href="../../articles/RJ-2022-044">dbcsp: User-friendly R package for Distance-Based Common Spatial Patterns</a><br>Itsaso Rodríguez, Itziar Irigoien, Basilio Sierra and Concepción Arenas</p>
-<p><a href="../../articles/RJ-2022-045">The R Package HDSpatialScan for the Detection of Clusters of Multivariate and Functional Data using Spatial Scan Statistics</a><br>Camille Frévent, Mohamed-Salem Ahmed, Julien Soula, Lionel Cucala, Zaineb Smida, Sophie Dabo-Niang and Michaël Genin</p>
-<p><a href="../../articles/RJ-2022-046">HDiR: An R Package for Computation and Nonparametric Plug-in Estimation of Directional Highest Density Regions and General Level Sets</a><br>Paula Saavedra-Nieves and Rosa M. Crujeiras</p>
-<p><a href="../../articles/RJ-2022-047">metapack: An R Package for Bayesian Meta-Analysis and Network Meta-Analysis with a Unified Formula Interface</a><br>Daeyoung Lim, Ming-Hui Chen, Joseph G. Ibrahim, Sungduk Kim, Arvind K. Shah and Jianxin Lin</p>
-<p><a href="../../articles/RJ-2022-048">did2s: Two-Stage Difference-in-Differences</a><br>Kyle Butts and John Gardner</p>
-<p><a href="../../articles/RJ-2022-049">rbw: An R Package for Constructing Residual Balancing Weights</a><br>Derick S. Baum and Xiang Zhou</p>
-<p><a href="../../articles/RJ-2022-050">Tidy Data Neatly Resolves Mass-Spectrometry’s Ragged Arrays</a><br>William Kumler and Anitra E. Ingalls</p>
-<p><a href="../../articles/RJ-2022-051">Log Likelihood Ratios for Common Statistical Tests Using the likelihoodR Package</a><br>Department of Pharmacology &amp; Biostatistics</p>
-<p><a href="../../articles/RJ-2022-058">CIMTx: An R Package for Causal Inference with Multiple Treatments using Observational Data</a><br>Liangyuan Hu and Jiayi Ji</p>
-<p><a href="../../articles/RJ-2022-053">logitFD: an R package for functional principal component logit regression</a><br>Manuel Escabias, Ana M. Aguilera and Christian Acal</p>
-<p><a href="../../articles/RJ-2022-054">eat: An R Package for fitting Efficiency Analysis Trees</a><br>Miriam Esteve, Victor España, Juan Aparicio and Xavier Barber</p>
-<p><a href="../../articles/RJ-2022-055">Will the Real Hopkins Statistic Please Stand Up?</a><br>Kevin Wright</p>
-<p><a href="../../articles/RJ-2022-056">Multivariate Subgaussian Stable Distributions in R</a><br>Bruce J. Swihart and John P. Nolan</p>
+<p><a href="../../articles/RJ-2022-042">WLinfer: Statistical Inference for Weighted Lindley Distribution</a><br>Yu-Hyeong Jang, SungBum Kim, Hyun-Ju Jung and Hyoung-Moon Kim (Corresponding author) 13</p>
+<p><a href="../../articles/RJ-2022-043">ICAOD: An R Package for Finding Optimal designs for Nonlinear Statistical Models by Imperialist Competitive Algorithm</a><br>Ehsan Masoudi, Heinz Holling, Weng Kee Wong and Seongho Kim 20</p>
+<p><a href="../../articles/RJ-2022-057">Analysis of the Results of Metadynamics Simulations by metadynminer and metadynminer3d</a><br>Dalibor Trapl and Vojtech Spiwok 46</p>
+<p><a href="../../articles/RJ-2022-052">casebase: An Alternative Framework for Survival Analysis and Comparison of Event Rates</a><br>Sahir Rai Bhatnagar<em>, Maxime Turgeon</em>, Jesse Islam, James A. Hanley and Olli Saarela 59</p>
+<p><a href="../../articles/RJ-2022-044">dbcsp: User-friendly R package for Distance-Based Common Spatial Patterns</a><br>Itsaso Rodríguez, Itziar Irigoien, Basilio Sierra and Concepción Arenas 80</p>
+<p><a href="../../articles/RJ-2022-045">The R Package HDSpatialScan for the Detection of Clusters of Multivariate and Functional Data using Spatial Scan Statistics</a><br>Camille Frévent, Mohamed-Salem Ahmed, Julien Soula, Lionel Cucala, Zaineb Smida, Sophie Dabo-Niang and Michaël Genin 95</p>
+<p><a href="../../articles/RJ-2022-046">HDiR: An R Package for Computation and Nonparametric Plug-in Estimation of Directional Highest Density Regions and General Level Sets</a><br>Paula Saavedra-Nieves and Rosa M. Crujeiras 121</p>
+<p><a href="../../articles/RJ-2022-047">metapack: An R Package for Bayesian Meta-Analysis and Network Meta-Analysis with a Unified Formula Interface</a><br>Daeyoung Lim, Ming-Hui Chen, Joseph G. Ibrahim, Sungduk Kim, Arvind K. Shah and Jianxin Lin 142</p>
+<p><a href="../../articles/RJ-2022-048">did2s: Two-Stage Difference-in-Differences</a><br>Kyle Butts and John Gardner 162</p>
+<p><a href="../../articles/RJ-2022-049">rbw: An R Package for Constructing Residual Balancing Weights</a><br>Derick S. Baum and Xiang Zhou 174</p>
+<p><a href="../../articles/RJ-2022-050">Tidy Data Neatly Resolves Mass-Spectrometry’s Ragged Arrays</a><br>William Kumler and Anitra E. Ingalls 193</p>
+<p><a href="../../articles/RJ-2022-051">Log Likelihood Ratios for Common Statistical Tests Using the likelihoodR Package</a><br>Peter Cahusac 203</p>
+<p><a href="../../articles/RJ-2022-058">CIMTx: An R Package for Causal Inference with Multiple Treatments using Observational Data</a><br>Liangyuan Hu and Jiayi Ji 213</p>
+<p><a href="../../articles/RJ-2022-053">logitFD: an R package for functional principal component logit regression</a><br>Manuel Escabias, Ana M. Aguilera and Christian Acal 231</p>
+<p><a href="../../articles/RJ-2022-054">eat: An R Package for fitting Efficiency Analysis Trees</a><br>Miriam Esteve, Victor España, Juan Aparicio and Xavier Barber 249</p>
+<p><a href="../../articles/RJ-2022-055">Will the Real Hopkins Statistic Please Stand Up?</a><br>Kevin Wright 282</p>
+<p><a href="../../articles/RJ-2022-056">Multivariate Subgaussian Stable Distributions in R</a><br>Bruce J. Swihart and John P. Nolan 293</p>
 <h3 id="news-and-notes">News and Notes</h3>
-<p><a href="../../news/RJ-2022-3-bioconductor">Bioconductor Notes, Autumn 2022</a><br>Bioconductor Core Developer Team</p>
-<p><a href="../../news/RJ-2022-3-cran">Changes on CRAN</a><br>Kurt Hornik, Uwe Ligges and Achim Zeileis</p>
+<p><a href="../../news/RJ-2022-3-bioconductor">Bioconductor Notes, Autumn 2022</a><br>Bioconductor Core Developer Team 303</p>
+<p><a href="../../news/RJ-2022-3-cran">Changes on CRAN</a><br>Kurt Hornik, Uwe Ligges and Achim Zeileis 305</p>
 <!--radix_placeholder_article_footer-->
 <!--/radix_placeholder_article_footer-->
 </div>
